[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20 = "0.9.1"
crypto = "0.5.1"
rand = "0.8.5"
hex = "0.4.3"
hex-literal = "0.4.1"
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
crypto-common = "0.1.6"
num-bigint = "0.4.4"
num-traits = "0.2.17"
generic-array = "0.14.7"
uuid = "1.6.1"
aws-sdk-s3 = "1.11.0"
aws-config = "1.1.1"
aws-smithy-types = "1.1.1"
aws-types = "1.1.1"
tokio = { version = "1.35.1", features = ["full", "rt", "rt-multi-thread", "macros"] }
bytes = "1.5.0"
tokio-stream = "0.1.14"

