[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
crypto-common = "0.1.6"
num-bigint = "0.4.4"
num-traits = "0.2.17"
generic-array = "0.14.7"
aws-sdk-s3 = "1.11.0"
aws-config = "1.1.1"
aws-smithy-types = "1.1.1"
aws-types = "1.1.1"
tokio = { version = "1.35.1", features = ["full", "rt", "rt-multi-thread", "macros"] }
bytes = "1.5.0"
anyhow = "1.0.79"
uuid = { version = "1.6.1", features = ["v7", "v4"] }
sha3 = "0.10.8"
hmac = "0.12.1"
chrono = "0.4.31"

